--- a/programowanie-dokumentow-dynamicznych/package.json
+++ b/programowanie-dokumentow-dynamicznych/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-radio-group": "^3.0.3",
+    "react-scripts": "2.1.8",
+    "react-select": "^2.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
