--- a/programowanie-dokumentow-dynamicznych/package.json
+++ b/programowanie-dokumentow-dynamicznych/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
+    "react-notifications": "^1.4.3",
     "react-radio-group": "^3.0.3",
     "react-scripts": "2.1.8",
-    "react-select": "^2.4.2"
+    "react-select": "^2.4.2",
+    "react-toastify": "^5.0.0-rc.6"
   },
   "scripts": {
     "start": "react-scripts start",
