--- a/programowanie-dokumentow-dynamicznych/package.json
+++ b/programowanie-dokumentow-dynamicznych/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "react": "^16.8.5",
+    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
     "react-notifications": "^1.4.3",
     "react-radio-group": "^3.0.3",
